Fix navigation alignment on larger screens

--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,12 @@ nav li a:hover {
   color: #fff;
   background-color: #0074d9;
 }
+
+@media only screen and (min-width: 38em) {
+  h1 {
+    text-align: left;
+  }
+  nav {
+    text-align: right;
+  }
+}
